# hancock-cli

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  LAUNCH_CHECKLIST.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: deploy-website.yml  publish-pypi.yml
docs/: google-cloud-setup.md  index.html
hancock/: __init__.py  __main__.py  cli.py
hancock/commands/: __init__.py  deploy.py  init.py  preview.py
hancock/core/: __init__.py  auth.py  config.py  directory.py  gmail.py  matching.py
hancock/ui/: __init__.py  colors.py  progress.py  prompts.py  tables.py
scripts/: prepare-release.sh
website/: 404.html  CNAME  README.md  index.html  robots.txt
